--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
  *
  * Made By MaterializeCSS.com
  */
+ .ilike-blue-container {
+  @extend .blue, .lighten-4;
+}
 
 nav ul a,
 nav .brand-logo {
@@ -55,3 +58,5 @@ p {
 footer.page-footer {
   margin: 0;
 }
+.fa {
+  font-size: 30px; }
